my-site/components/layout/Header.module.css
.nav {
    display: flex;
    gap: 40px;
    padding: 20px 40px;
    border-bottom: 1px solid var(--col-border);
    width:100%;
    position: fixed;
    z-index: 10;
    background-color: var(--col-bg);
    top:0;
}

.nav > * {
    color: var(--col-text);
}

.link {
    text-decoration: none;
    color: var(--col-text);
}

.link:hover {
    opacity: 0.7;
}

.pageTitle {
    font-size: 4em;
    padding: 20px 40px;
    color: var(--col-accent);
}

@media(max-width: 768px) {
    .pageTitle {
        font-size: 2em;
    }
}

